Design editor: unify button's and subit's backgrounds in dark theme. Prevent search input's getting out of container in some cases

--- a/sources/components/custom-styles/template-cs-style-rules.scss
+++ b/sources/components/custom-styles/template-cs-style-rules.scss
@@ -259,6 +259,7 @@ body {
 
     .custom-btn,
     .form_submit input {
+      background: linear-gradient(to bottom,rgba(0,0,0,.6) 0,rgba(0,0,0,.8) 100%);
       background-color: var(--button-background-color);
       color: var(--light-secondary);
     }
