--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -2503,12 +2503,14 @@ ul.menu .menu-item:before {
   margin: 0;
   padding: 0 50px 0 15px;
   height: 35px;
-  border: none;
   background: none;
+  border: none;
+  box-sizing: border-box;
   vertical-align: middle;
   font-size: 1em;
   font-family: inherit;
   line-height: 1;
+  max-width: 235px;
 }
 .search-input::-webkit-input-placeholder {
   padding: 4px 0 4px 0;
